--- a/QLHSTHPT/QLHSTHPT.csproj
+++ b/QLHSTHPT/QLHSTHPT.csproj
@@ -124,6 +124,7 @@
     <Compile Include="FormTTDangNhap.Designer.cs">
       <DependentUpon>FormTTDangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QLHSTHPTDataSet.cs">
