--- a/QLHSTHPT/QLHSTHPT.csproj
+++ b/QLHSTHPT/QLHSTHPT.csproj
@@ -204,6 +204,12 @@
     <Compile Include="FormTimHK_CongViec.Designer.cs">
       <DependentUpon>FormTimHK_CongViec.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTimHK_LHS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTimHK_LHS.Designer.cs">
+      <DependentUpon>FormTimHK_LHS.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTimHK_PhanCong.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +222,12 @@
     <Compile Include="FormTimHS.Designer.cs">
       <DependentUpon>FormTimHS.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTimInfoHS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTimInfoHS.Designer.cs">
+      <DependentUpon>FormTimInfoHS.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTimLop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -227,6 +239,12 @@
     </Compile>
     <Compile Include="FormTimNH_CongViec.Designer.cs">
       <DependentUpon>FormTimNH_CongViec.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTimNH_LHS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTimNH_LHS.Designer.cs">
+      <DependentUpon>FormTimNH_LHS.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTimNH_PhanCong.cs">
       <SubType>Form</SubType>
@@ -249,6 +267,8 @@
     <Compile Include="Helper.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="Model\HocSinh.cs" />
+    <Compile Include="Model\Lop_HS.cs" />
+    <Compile Include="Model\MyCache.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QLHSTHPTDataSet.cs">
@@ -258,6 +278,14 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>QLHSTHPTDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="QLHSTHPTDataSet1.cs">
+      <DependentUpon>QLHSTHPTDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="QLHSTHPTDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLHSTHPTDataSet1.xsd</DependentUpon>
     </Compile>
     <EmbeddedResource Include="BaoCao\BangDiemHS.resx">
       <DependentUpon>BangDiemHS.cs</DependentUpon>
@@ -322,17 +350,26 @@
     <EmbeddedResource Include="FormTimHK_CongViec.resx">
       <DependentUpon>FormTimHK_CongViec.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormTimHK_LHS.resx">
+      <DependentUpon>FormTimHK_LHS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTimHK_PhanCong.resx">
       <DependentUpon>FormTimHK_PhanCong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTimHS.resx">
       <DependentUpon>FormTimHS.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormTimInfoHS.resx">
+      <DependentUpon>FormTimInfoHS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTimLop.resx">
       <DependentUpon>FormTimLop.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTimNH_CongViec.resx">
       <DependentUpon>FormTimNH_CongViec.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTimNH_LHS.resx">
+      <DependentUpon>FormTimNH_LHS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTimNH_PhanCong.resx">
       <DependentUpon>FormTimNH_PhanCong.cs</DependentUpon>
@@ -380,6 +417,17 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="QLHSTHPTDataSet1.xsc">
+      <DependentUpon>QLHSTHPTDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="QLHSTHPTDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLHSTHPTDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLHSTHPTDataSet1.xss">
+      <DependentUpon>QLHSTHPTDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Resources\Diagram.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
